Fixed problem that the button font becomes Mincho on iOS.

--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@ class Button {
         this.context = context;
 
         // 表示。
-        this.fontName = `Candara`;
         this.fontSize = this.canvas.width / 10;
+        this.fontName = 'Arial, Roboto, "Droid Sans", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Meiryo", sans-serif';
         this.fontFillStyle = "blue";   // text color.
         this.fontStrokeStyle = "blue"; // not used.
         this.textAlign = 'center';
