--- a/index.html
+++ b/index.html
@@ -312,12 +312,9 @@ class Button {
         this.context = context;
 
         // 表示。
-        this.fontSize = this.canvas.width / 10;
         this.fontName = 'Arial, Roboto, "Droid Sans", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Meiryo", sans-serif';
         this.fontFillStyle = "blue";   // text color.
         this.fontStrokeStyle = "blue"; // not used.
-        this.textAlign = 'center';
-        this.textBaseline = 'middle';
         this.backFillStyle = 'LightCyan';     // button back
         this.backActiveStyle = 'LightSkyBlue' // button back(active)
         this.backStrokeStyle = "blue";        // button border.
@@ -359,14 +356,12 @@ class Button {
         this.context.save();
         this.context.font = `${this.fontSize}px ${this.fontName}`;
         const metrics = this.context.measureText(this.text);
-        const metrics1 = this.context.measureText(' '); // 一文字分。
-        this.context.restore();
-
-        // サイズを取得する。
         this.width = metrics.width;
         this.height = metrics.actualBoundingBoxAscent + metrics.actualBoundingBoxDescent;
-        this.width += metrics1.width;  // 狭いので1文字分広く。
-        this.height += metrics1.width; // 狭いので1文字分広く。
+        
+        const metrics1 = this.context.measureText(' '); // 一文字分。
+        this.padding = metrics1.width;  // 狭いので1文字分広く。
+        this.context.restore();
     }
 
     // mousemove, mousedown, mouseupイベントのインストール。
@@ -416,22 +411,21 @@ class Button {
     draw() {
         this.context.save();
         {
-            // 中心を移動。
-            this.context.translate(this.centerX, this.centerY);
+            // 中心を移動。→この方法ではButtonの中心にテキストを描画するのが難しかったのでコメントアウト。
+            //this.context.translate(this.centerX, this.centerY);
 
             // 角丸を描画。
             this.context.lineWidth = this.height * (this.is_active? 0.1: 0.02); // this.widthは不自然。this.heightを使う。
             this.context.fillStyle = this.is_active? this.backActiveStyle: this.backFillStyle;
             this.context.strokeStyle = this.backStrokeStyle;
-            this.roundedRect(0, 0, this.width, this.height, this.height*0.2);
+            this.roundedRect(this.centerX, this.centerY, this.width+this.padding, this.height+this.padding, this.height*0.2);
 
             // テキストを描画。
             this.context.fillStyle = this.fontFillStyle;
             this.context.strokeStyle = this.fontStrokeStyle;
             this.context.font = `${this.fontSize}px ${this.fontName}`;
-            this.context.textAlign = this.textAlign;
-            this.context.textBaseline = this.textBaseline;
-            this.context.fillText(this.text, 0, this.height*0.1);
+            this.context.textAlign = 'center';
+            this.context.fillText(this.text, this.centerX, this.centerY+this.height/2);
         }
         this.context.restore();
     }
