--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+ * micropad
+ * Copyright (c) 2025 secile
+ * This software is released under the MIT license.
+ * see https://opensource.org/licenses/MIT
+-->
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <title>micro:pad</title>
